# csrt-dev-interface

./: CMakeLists.txt  README.md  main.cpp
include/: PatternTracker.h
src/: PatternTracker.cpp
test/: CMakeLists.txt  utest.cpp
